// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> Snapshots should match snapshot with default EventCard 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "elevation": 4,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
          "shadowColor": "rgba(152, 152, 166, 0.25)",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 6,
        },
        Object {
          "flexDirection": "row",
          "height": 104,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "width": 280,
        },
      ]
    }
    variant=""
    variantIntensity={3}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#8051E1",
            "borderBottomLeftRadius": 8,
            "borderTopLeftRadius": 8,
            "justifyContent": "center",
            "width": 56,
          },
        ]
      }
      variant="secondary"
    >
      <Text
        inverted={true}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Open Sans",
              "fontSize": 14,
              "fontWeight": "600",
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        thu
      </Text>
      <Text
        inverted={true}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Open Sans",
              "fontSize": 20,
              "fontWeight": "700",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        19
      </Text>
      <Text
        inverted={true}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Open Sans",
              "fontSize": 14,
              "fontWeight": "600",
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        dec
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#41414A",
              "fontFamily": "Open Sans",
              "fontSize": 16,
              "fontWeight": "600",
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        Yoga Class
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#6B6B78",
              "fontFamily": "Open Sans",
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        Gympass
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#41414A",
              "fontFamily": "Open Sans",
              "fontSize": 12,
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        19 am
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Card /> Snapshots should match snapshot with variant primary EventCard 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "elevation": 4,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
          "shadowColor": "rgba(152, 152, 166, 0.25)",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 6,
        },
        Object {
          "flexDirection": "row",
          "height": 104,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "width": 280,
        },
      ]
    }
    variant=""
    variantIntensity={3}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#F78D82",
            "borderBottomLeftRadius": 8,
            "borderTopLeftRadius": 8,
            "justifyContent": "center",
            "width": 56,
          },
        ]
      }
      variant="primary"
    >
      <Text
        inverted={true}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Open Sans",
              "fontSize": 14,
              "fontWeight": "600",
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        thu
      </Text>
      <Text
        inverted={true}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Open Sans",
              "fontSize": 20,
              "fontWeight": "700",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        19
      </Text>
      <Text
        inverted={true}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Open Sans",
              "fontSize": 14,
              "fontWeight": "600",
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        dec
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#41414A",
              "fontFamily": "Open Sans",
              "fontSize": 16,
              "fontWeight": "600",
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        Yoga Class
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#6B6B78",
              "fontFamily": "Open Sans",
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        Gympass
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#41414A",
              "fontFamily": "Open Sans",
              "fontSize": 12,
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        19 am
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Card /> Snapshots should match snapshot with variant secondary EventCard 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "elevation": 4,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
          "shadowColor": "rgba(152, 152, 166, 0.25)",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 6,
        },
        Object {
          "flexDirection": "row",
          "height": 104,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "width": 280,
        },
      ]
    }
    variant=""
    variantIntensity={3}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#8051E1",
            "borderBottomLeftRadius": 8,
            "borderTopLeftRadius": 8,
            "justifyContent": "center",
            "width": 56,
          },
        ]
      }
      variant="secondary"
    >
      <Text
        inverted={true}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Open Sans",
              "fontSize": 14,
              "fontWeight": "600",
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        thu
      </Text>
      <Text
        inverted={true}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Open Sans",
              "fontSize": 20,
              "fontWeight": "700",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        19
      </Text>
      <Text
        inverted={true}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Open Sans",
              "fontSize": 14,
              "fontWeight": "600",
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        dec
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#41414A",
              "fontFamily": "Open Sans",
              "fontSize": 16,
              "fontWeight": "600",
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        Yoga Class
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#6B6B78",
              "fontFamily": "Open Sans",
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        Gympass
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#41414A",
              "fontFamily": "Open Sans",
              "fontSize": 12,
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        19 am
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Card /> Snapshots should match snapshot with variant tertiary EventCard 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "elevation": 4,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
          "shadowColor": "rgba(152, 152, 166, 0.25)",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 6,
        },
        Object {
          "flexDirection": "row",
          "height": 104,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "width": 280,
        },
      ]
    }
    variant=""
    variantIntensity={3}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#3FA99B",
            "borderBottomLeftRadius": 8,
            "borderTopLeftRadius": 8,
            "justifyContent": "center",
            "width": 56,
          },
        ]
      }
      variant="tertiary"
    >
      <Text
        inverted={true}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Open Sans",
              "fontSize": 14,
              "fontWeight": "600",
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        thu
      </Text>
      <Text
        inverted={true}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Open Sans",
              "fontSize": 20,
              "fontWeight": "700",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        19
      </Text>
      <Text
        inverted={true}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Open Sans",
              "fontSize": 14,
              "fontWeight": "600",
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        dec
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#41414A",
              "fontFamily": "Open Sans",
              "fontSize": 16,
              "fontWeight": "600",
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        Yoga Class
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#6B6B78",
              "fontFamily": "Open Sans",
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        Gympass
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#41414A",
              "fontFamily": "Open Sans",
              "fontSize": 12,
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        19 am
      </Text>
    </View>
  </View>
</View>
`;
